@@ -5,7 +5,6 @@ Required for alpha 3
 --------------------
 
 Implement serial I/O
-Implement LIST FILES
 Implement OPTION CODEPAGE
   - to automagically convert chars 128+ to Unicode
 Implement CONSOLE SETSIZE x%, y%
