@@ -1,17 +1,21 @@
 #include "../common/version.h"
 
-void cmd_files(void) {
-    char command[STRINGSIZE];
+void cmd_files_internal(char *p) {
+    char *command = GetTempStrMemory();
 
-    skipspace(cmdline);
-    if (*cmdline != '\0' && *cmdline != '\\') {
-        sprintf(command, "ls %s", getCstring(cmdline));
+    skipspace(p);
+    if (*p != '\0' && *p != '\'') {
+        snprintf(command, STRINGSIZE, "ls %s", getCstring(p));
     } else {
-        sprintf(command, "ls");
+        snprintf(command, STRINGSIZE, "ls");
     }
 
     int result = system(command);
     // if (result != 0) error("System command failed");
 
     MMPrintString("\r\n");
+}
+
+void cmd_files(void) {
+    cmd_files_internal(cmdline);
 }
